# mcp-govcheck

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BENCHMARK.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: demo.tape
evals/: run_evals.py  safety_cases.py  scenarios.yaml
evals/fixtures/: tool_schemas.json
examples/: asset_store_server.py  sample_calls.jsonl
rubrics/: default.yaml
src/mcp_govcheck/: __init__.py  cli.py  controls.py  evidence.py  introspect.py  report.py  rubric.py  score.py  types.py
tests/: test_cli.py  test_controls.py  test_evidence.py  test_introspect.py  test_report.py  test_rubric.py  test_score.py
